[package]
name = "pk-command"
version = "1.1.0"
edition = "2024"
license = "MIT"
description = "A communication protocol designed for embedded devices"
homepage = "https://github.com/lingrottin/PK-Command"
repository = "https://github.com/lingrottin/PK-Command.git"
documentation = "https://docs.rs/pk-command"
exclude = [".github/", "Specification.md", "Specification_zh.md"]
